2010-05-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use the coding-system `utf-8-unix' for
	reading data retrieved from Twitter.
	(twittering-start-http-session-curl): use the coding-system
	`utf-8-unix' for reading data retrieved from Twitter.
	(twittering-start-http-session-native): likewise.

	* twittering-mode.el: Omit a successful HTTP response and headers
	if they seem to be sent from a proxy for CONNECT method.
	(twittering-http-default-sentinel): omit a successful HTTP
	response and headers from a proxy if using SSL via the proxy.
	(twittering-get-response-header): do not remove headers from a
	proxy.

	* twittering-mode.el: Do not initialize `twittering-tls-program'
	multiple times.
	(twittering-start-http-session-native-tls-p): check `tls-program'
	only if `twittering-tls-program' is nil.

	* twittering-mode.el: Cache the result of capability confirmation
	for `curl'.
	(twittering-start-http-session-curl-p): do not initialize
	`twittering-curl-program' multiple times.
	(twittering-start-http-session-curl-https-p): do not execute
	`curl' multiple times.

	* twittering-mode.el: Look-up of connection type is rearranged.
	(twittering-lookup-http-start-function): reimplemented.
	(twittering-lookup-connection-type): new function.

	* twittering-mode.el: Confirm an available connection method
	before visiting a timeline.
	(twittering-visit-timeline): confirm connection method.

	* twittering-mode.el: Support authentication via OAuth. The
	authentication requires a consumer information registered with
	Twitter and an external WWW browser to authorize a request token.
	(twittering-auth-method): new variable.
	(twittering-oauth-consumer-key, twittering-oauth-consumer-secret):
	new variables for specifying an OAuth consumer.
	(twittering-oauth-access-token-alist): new variable for storing
	access token.
	(twittering-oauth-url-encode): new function.
	(twittering-oauth-unhex): new function.
	(twittering-oauth-url-decode): new function.