@@ -5559,6 +5559,7 @@ managed by `twittering-mode'."
   (interactive)
   (let ((id (get-text-property (point) 'id))
 	(text (copy-sequence (get-text-property (point) 'text)))
+	(user (get-text-property (point) 'username))
 	(width (max 40 ;; XXX
 		    (- (frame-width)
 		       1 ;; margin for wide characters
@@ -5567,15 +5568,17 @@ managed by `twittering-mode'."
 		    )))
     (set-text-properties 0 (length text) nil text)
     (if id
-	(let ((mes (format "Retweet \"%s\"? "
-			   (if (< width (string-width text))
-			       (concat
-				(truncate-string-to-width text (- width 3))
-				"...")
-			     text))))
-	  (if (y-or-n-p mes)
-	      (twittering-call-api 'retweet `((id . ,id)))
-	    (message "Request canceled")))
+	(if (not (string= user twittering-username))
+	    (let ((mes (format "Retweet \"%s\"? "
+			       (if (< width (string-width text))
+				   (concat
+				    (truncate-string-to-width text (- width 3))
+				    "...")
+				 text))))
+	      (if (y-or-n-p mes)
+		  (twittering-call-api 'retweet `((id . ,id)))
+		(message "Request canceled")))
+	  (message "Cannot retweet your own tweet"))
       (message "No status selected"))))
 
 (defun twittering-favorite (&optional remove)
